Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71902

REG->5.12 RC: QQC2: Incorrect font size

XMLWordPrintable

    • Android, Windows
    • 0ca69961a2bd544cd417d849018427ae0c8cda05 (qt/qtquickcontrols2/5.12)

      The fonts have an incorrect size in Qt 5.12, see the toolbar and "Qt Quick Controls 2" text in heading 2 section.

      Below a screenshots of an example application using Qt 5.11 and Qt 5.12.

        1. button_5_11.png
          57 kB
          Ekkehard
        2. button_5_12_rc.png
          55 kB
          Ekkehard
        3. buttons_windows_small.png
          149 kB
          Ekkehard
        4. iPhone8.png
          197 kB
          Ekkehard
        5. texteditor_5.11.png
          22 kB
          Sebastian Nibisz
        6. texteditor_5.12_beta4.png
          21 kB
          Sebastian Nibisz
        7. texteditor-5.11-vs-5.12-universal-win10.PNG
          140 kB
          Mitch Curtis
        8. w10_msvc2017_debug.png
          69 kB
          Ekkehard
        9. w10_msvc2017_release.png
          116 kB
          Ekkehard
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            pebal Sebastian Nibisz
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes